# sim_6he_practice

./: .gitattributes  CMakeLists.txt  README.md  main.cpp  simulation.root
condition/: README.md  input.txt  sample.txt
database/: memo.txt
database/cross_section/: cs_6he_d_Ecm10MeV.txt
database/energyloss/: sample.txt
lib/: CMakeLists.txt
lib/include/: beam.h  function.h  mass.h
lib/source/: beam.cpp  function.cpp  mass.cpp
rootfile/: Det_Si.C  Det_Si.h  detector.C  simulation.root
